--- a/06_Explorer/platformio.ini
+++ b/06_Explorer/platformio.ini
@@ -14,6 +14,16 @@ board = uno
 framework = arduino
 test_filter = uno*
 lib_deps = adafruit/Adafruit Motor Shield V2 Library@^1.0.11
+upload_port = /dev/ttyACM0
+
+[env:Debug]
+platform = atmelavr
+board = uno
+framework = arduino
+test_filter = uno*
+lib_deps = adafruit/Adafruit Motor Shield V2 Library@^1.0.11
+upload_port = /dev/ttyACM0
+
 
 [env:native]
 platform = native
